
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_2__ ;
typedef struct TYPE_5__ TYPE_1__ ;


struct TYPE_5__ {int list; int * remap; struct TYPE_5__* buf; scalar_t__ converter; } ;
typedef TYPE_1__ hb_work_private_t ;
struct TYPE_6__ {TYPE_1__* private_data; } ;
typedef TYPE_2__ hb_work_object_t ;


 int AudioConverterDispose (scalar_t__) ;
 int free (TYPE_1__*) ;
 int hb_audio_remap_free (int *) ;
 int hb_list_empty (int *) ;

void encCoreAudioClose(hb_work_object_t *w)
{
    hb_work_private_t *pv = w->private_data;

    if (pv != ((void*)0))
    {
        if (pv->converter)
        {
            AudioConverterDispose(pv->converter);
        }
        if (pv->buf != ((void*)0))
        {
            free(pv->buf);
        }
        if (pv->remap != ((void*)0))
        {
            hb_audio_remap_free(pv->remap);
        }
        hb_list_empty(&pv->list);
        free(pv);
        w->private_data = ((void*)0);
    }
}
